--- a/project/web/templates/web/base.html
+++ b/project/web/templates/web/base.html
@@ -9,19 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <style>
-        .main_ul {
-           /* display: grid;
-
-            grid-template-columns: repeat({{  hierarchy|length }}, 1fr);*/
-
-        }
-
-   
-        .level-2-wrapper {
-            position: relative;
-            display: grid;
-        }
-       
+        
       
     </style>
 </head>
@@ -65,111 +53,20 @@
 
 <h1>Иерархия работников</h1>
 
-
-    <ul class="main_ul">
-        {% for ceo in employees %}
-
-                    <li class="first">
-                        <div class="employee_info_ceo">
-                            <h6>{{ ceo.employee_id }} {{ ceo.name }}</h6>
-                            <p>{{ ceo.position }}</p>
-                        </div>
-                    </li>
-                    {% if ceo.subordinates %}
-
-            <ul class="sub_ul_1" style="grid-template-columns: repeat({{ ceo.subordinates|length }}, 1fr);
-">
-                    {% for subord_1 in ceo.subordinates %}
-                    	<li>
-                            <div class="">
-                                <h5>{{ subord_1.name }}</h5>
-                                <p>{{ subord_1.position }}</p>
-                            </div>
-                        </li>
-                      	
-                      	 {% if subord_1.subordinates %}
-                      	<ul>
-                      		{% for subord_2 in subord_1.subordinates %}
-                      		<li>{{ subord_2.name }}</li>
-                      			{% if subord_2.subordinates %}
-                      			<ul>
-                      			{% for subordinate3 in subord_1.subordinates %}
-                      			<li>{{ subordinate3.name }}</li>
-                      			{% endfor %}
-                      			</ul>
-                      			{% endif %}
-                      		{% endfor %}
-                      	</ul>
-                      	{% endif %} 
-                    
-                    {% endfor %}
+{% load mptt_tags %}  
+<ul>
+    {% recursetree nodes %}
+        <li>
+            {{ node.name }}
+            {% if not node.is_leaf_node %} 
+                <ul class="children">
+                    {{ children }}
                 </ul>
             {% endif %}
-            </div>
-        </div>
-        {% endfor %}
-    </ul>
+        </li>
+    {% endrecursetree %}
+</ul>
 
-
-<!-- 
-<div class="container">
-    {% for employee in employees %}
-
-    <button class="btn btn-danger">{{ employee.name }} - {{ employee.position }}</button>
-    {% if employee.subordinates.all %}
-        <ol class="" style="grid-template-columns: repeat({{ employee.subordinates.all|length }}, 1fr)">
-
-            {% for employee_2 in employee.subordinates.all %}
-            <li>
-                <h2 class="">{{ employee_2.name }} - {{ employee_2.position }}</h2>
-
-                {% if employee_2.subordinates.all %}
-                {% for employee_2 in employee_2.subordinates.all %}
-
-                <ol class="" style="grid-template-columns: repeat({{ employee_2.subordinates.all|length }}, 1fr)">
-                    <li><h3 class="">{{ employee_3.name }} - {{ employee_3.position }}</h3></li>
-                    {% endfor %}
-                </ol>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ol>
-    {% endif %}
-    {% endfor %}
-</div>   -->
-
-<!-- <ul >
-{% for employee in employees %}
-    <li class="employee" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">{{ employee.name }} - {{ employee.position }}</li>
-    
-    {% if employee.subordinates.all %}
-        <ul >
-        {% for employee_2 in employee.subordinates.all %}
-            <li class="employee_2 collapse" id="collapseExample">{{ employee_2.name }} - {{ employee_2.position }}</li>
-                
-                {% if employee_2.subordinates.all %}
-                    <ul>
-                    {% for employee_3 in employee_2.subordinates.all %}
-                        <li>{{ employee_3.name }} - {{ employee_3.position }}</li>
-                        
-                        {% if employee_3.subordinates.all %}
-                        <ul>
-                        {% for employee_4 in employee_3.subordinates.all %}
-                            <li>{{ employee_4.name }} - {{ employee_4.position }}</li>
-                        {% endfor %}
-                        </ul>
-                    {% endif %}
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-        {% endfor %}
-
-
-
-        </ul>
-    {% endif %}
-{% endfor %}
-</ul>   -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
