--- a/project/web/templates/web/index.html
+++ b/project/web/templates/web/index.html
@@ -1,19 +1,14 @@
-{% load treebeard_tags %}
-{% load static %}
-
+{% extends 'base.html' %}
+{% load mptt_tags %}  
 <ul>
-{% for employee in employees %}
-    <li>
-        {{ employee.name }}
-        {% if employee.is_leaf_node %}
-            (No subordinates)
-        {% else %}
-            <ul>
-                {% recursetree employee %}
-                <li>{{ node.name }}</li>
-                {% endrecursetree %}
-        </ul>
-        {% endif %}
-    </li>
-{% endfor %}
+    {% recursetree nodes %}
+        <li>
+            {{ node.name }}
+            {% if not node.is_leaf_node %} 
+                <ul class="children">
+                    {{ children }}
+                </ul>
+            {% endif %}
+        </li>
+    {% endrecursetree %}
 </ul>
